basic server handle

--- a/distributed/CMakeLists.txt
+++ b/distributed/CMakeLists.txt
@@ -17,4 +17,4 @@ include_directories(common)
 include_directories(server)
 file(GLOB SERVER_SOURCES "server/*.c")
 add_executable(${CMAKE_PROJECT_NAME} ${SERVER_SOURCES} ${COMMON_SOURCES})
-target_link_libraries(${CMAKE_PROJECT_NAME} progbase jansson)
+target_link_libraries(${CMAKE_PROJECT_NAME} progbase jansson ssl)
